counting f(w,d) number of word occurences in document

--- a/tf-idf.ipynb
+++ b/tf-idf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -27,43 +27,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Repair cafés waging war on throwaway culture\n",
-      "Mathematics for Computer Science: Readings\n",
-      "The Nightmare Letter: A Subject Access Request Under GDPR\n",
-      "Hack everything without fear\n",
-      "TinyVM – A small and easy to understand virtual machine in C\n",
-      "50M Facebook profiles harvested for Cambridge Analytica in major data breach\n",
-      "Tail recursion in Python\n",
-      "Show HN: Makesite – A static site generator in 125 lines of Python\n",
-      "Inheritance Often Doesn't Make Sense\n",
-      "Launch HN: Rhythmm (YC W18) – Create channels and broadcast them to an audience\n",
-      "More State Machine Love: From Reflection to Statecharts\n",
-      "Kikkuli, 1345 BCE: Training the Chariot Horse\n",
-      "How Europeans evolved white skin (2015)\n",
-      "Power Outage at Samsung Fab Destroys 3.5% of Global NAND Flash Output for March\n",
-      "Tail calls, tailrec and trampolines (2009)\n",
-      "The Struggle of Keeping a Roadside Attraction Alive\n",
-      "The Unlikely Pulp Fiction Illustrations of Edward Hopper\n",
-      "Chirpss – Hear and see people visiting or leaving your website\n",
-      "Troubleshooting IPv6 badness to certain hosts in a rack\n",
-      "Google Maps has found a better way to navigate India’s chaotic roads\n",
-      "Berkeley Council Approves Surveillance Technology Oversight Ordinance\n",
-      "Making a TTS model with 1 minute of speech samples within 10 minutes\n",
-      "Schools Are Spending Millions on High-Tech Surveillance of Kids\n",
-      "At My Lai: The Photographer Who Captured the Massacre\n",
-      "The Game of Everything, Part 1: Making Civilization\n",
-      "GrayKey iPhone unlocker poses serious security concerns\n",
-      "Japan’s Prisons Are a Haven for Elderly Women\n",
-      "10x Performance Increases: Optimizing a Static Site\n",
-      "Bus Lane Blocked, He Trained His Computer to Catch Scofflaws\n",
-      "Money creation in the modern economy (2014) [pdf]\n"
+      "Launch HN: Promise (YC W18) – Cost-effective, more humane alternative to jail\n",
+      "FTC Probing Facebook for Use of Personal Data, Source Says\n",
+      "Lightning on Stellar: Technical Spec and Roadmap\n",
+      "Google News Initiative\n",
+      "Mont Saint Michel Reveals New Secrets\n",
+      "'Fifth Generation' Became Japan's Lost Generation (1992)\n",
+      "Online flag waver\n",
+      "BuildZoom (YC W13) is hiring an engineering manager\n",
+      "A Self-Replicating Neural Network\n",
+      "The US Army’s costly quest for the perfect radio\n",
+      "NGraph: A New Open Source Compiler for Deep Learning Systems\n",
+      "Debugging Behind the Iron Curtain (2010)\n",
+      "Eve: Programming designed for humans\n",
+      "The Brown One, the Honey Eater, the Shaggy Coat, the Destroyer (1998)\n",
+      "Macular degeneration: 'I've been given my sight back'\n",
+      "The history of documented Unix facilities\n",
+      "Breaking the Ledger Crypto Wallet Security Model\n",
+      "Diaphragmatic Breathing Exercises and Your Vagus Nerve (2017)\n",
+      "The ability to correct errors in GPLv2 compliance: the right thing to do\n",
+      "Texas Woman with Cerebral Palsy: Uber Denied Her Service Over Two Dozen Times\n",
+      "Both Facebook and Cambridge Analytica Threatened to Sue Journalists\n",
+      "SpaceX indicates it will manufacture the BFR rocket in Los Angeles\n",
+      "Show HN: Word2Bits – Quantized Word Vectors\n",
+      "The NSA Worked to “Track Down” Bitcoin Users, Snowden Documents Reveal\n",
+      "In Search of God’s Perfect Proofs\n",
+      "Reflections on founder mental health, coaching, a decade after losing my mom\n",
+      "Ex-Facebook insider says covert data harvesting was routine\n",
+      "Salesforce in advanced talks to buy MuleSoft\n",
+      "N26 raises $160M from Tencent and Allianz\n",
+      "Toxic management cost an award-winning game studio its best developers\n"
      ]
     }
    ],
@@ -72,6 +72,275 @@
     "[documents.append(i.find(\"title\").text) for i in items]\n",
     "for doc in documents:\n",
     "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launch - 1\n",
+      "HN: - 1\n",
+      "Promise - 1\n",
+      "(YC - 1\n",
+      "W18) - 1\n",
+      "– - 1\n",
+      "Cost-effective, - 1\n",
+      "more - 1\n",
+      "humane - 1\n",
+      "alternative - 1\n",
+      "to - 1\n",
+      "jail - 1\n",
+      "FTC - 1\n",
+      "Probing - 1\n",
+      "Facebook - 1\n",
+      "for - 1\n",
+      "Use - 1\n",
+      "of - 1\n",
+      "Personal - 1\n",
+      "Data, - 1\n",
+      "Source - 1\n",
+      "Says - 1\n",
+      "Lightning - 1\n",
+      "on - 1\n",
+      "Stellar: - 1\n",
+      "Technical - 1\n",
+      "Spec - 1\n",
+      "and - 1\n",
+      "Roadmap - 1\n",
+      "Google - 1\n",
+      "News - 1\n",
+      "Initiative - 1\n",
+      "Mont - 1\n",
+      "Saint - 1\n",
+      "Michel - 1\n",
+      "Reveals - 1\n",
+      "New - 1\n",
+      "Secrets - 1\n",
+      "'Fifth - 1\n",
+      "Generation' - 1\n",
+      "Became - 1\n",
+      "Japan's - 1\n",
+      "Lost - 1\n",
+      "Generation - 1\n",
+      "(1992) - 1\n",
+      "Online - 1\n",
+      "flag - 1\n",
+      "waver - 1\n",
+      "BuildZoom - 1\n",
+      "(YC - 1\n",
+      "W13) - 1\n",
+      "is - 1\n",
+      "hiring - 1\n",
+      "an - 1\n",
+      "engineering - 1\n",
+      "manager - 1\n",
+      "A - 1\n",
+      "Self-Replicating - 1\n",
+      "Neural - 1\n",
+      "Network - 1\n",
+      "The - 1\n",
+      "US - 1\n",
+      "Army’s - 1\n",
+      "costly - 1\n",
+      "quest - 1\n",
+      "for - 1\n",
+      "the - 1\n",
+      "perfect - 1\n",
+      "radio - 1\n",
+      "NGraph: - 1\n",
+      "A - 1\n",
+      "New - 1\n",
+      "Open - 1\n",
+      "Source - 1\n",
+      "Compiler - 1\n",
+      "for - 1\n",
+      "Deep - 1\n",
+      "Learning - 1\n",
+      "Systems - 1\n",
+      "Debugging - 1\n",
+      "Behind - 1\n",
+      "the - 1\n",
+      "Iron - 1\n",
+      "Curtain - 1\n",
+      "(2010) - 1\n",
+      "Eve: - 1\n",
+      "Programming - 1\n",
+      "designed - 1\n",
+      "for - 1\n",
+      "humans - 1\n",
+      "the - 3\n",
+      "The - 1\n",
+      "Brown - 1\n",
+      "One, - 1\n",
+      "Honey - 1\n",
+      "Eater, - 1\n",
+      "Shaggy - 1\n",
+      "Coat, - 1\n",
+      "Destroyer - 1\n",
+      "(1998) - 1\n",
+      "Macular - 1\n",
+      "degeneration: - 1\n",
+      "'I've - 1\n",
+      "been - 1\n",
+      "given - 1\n",
+      "my - 1\n",
+      "sight - 1\n",
+      "back' - 1\n",
+      "The - 1\n",
+      "history - 1\n",
+      "of - 1\n",
+      "documented - 1\n",
+      "Unix - 1\n",
+      "facilities - 1\n",
+      "Breaking - 1\n",
+      "the - 1\n",
+      "Ledger - 1\n",
+      "Crypto - 1\n",
+      "Wallet - 1\n",
+      "Security - 1\n",
+      "Model - 1\n",
+      "Diaphragmatic - 1\n",
+      "Breathing - 1\n",
+      "Exercises - 1\n",
+      "and - 1\n",
+      "Your - 1\n",
+      "Vagus - 1\n",
+      "Nerve - 1\n",
+      "(2017) - 1\n",
+      "to - 2\n",
+      "The - 1\n",
+      "ability - 1\n",
+      "correct - 1\n",
+      "errors - 1\n",
+      "in - 1\n",
+      "GPLv2 - 1\n",
+      "compliance: - 1\n",
+      "the - 1\n",
+      "right - 1\n",
+      "thing - 1\n",
+      "do - 1\n",
+      "Texas - 1\n",
+      "Woman - 1\n",
+      "with - 1\n",
+      "Cerebral - 1\n",
+      "Palsy: - 1\n",
+      "Uber - 1\n",
+      "Denied - 1\n",
+      "Her - 1\n",
+      "Service - 1\n",
+      "Over - 1\n",
+      "Two - 1\n",
+      "Dozen - 1\n",
+      "Times - 1\n",
+      "Both - 1\n",
+      "Facebook - 1\n",
+      "and - 1\n",
+      "Cambridge - 1\n",
+      "Analytica - 1\n",
+      "Threatened - 1\n",
+      "to - 1\n",
+      "Sue - 1\n",
+      "Journalists - 1\n",
+      "SpaceX - 1\n",
+      "indicates - 1\n",
+      "it - 1\n",
+      "will - 1\n",
+      "manufacture - 1\n",
+      "the - 1\n",
+      "BFR - 1\n",
+      "rocket - 1\n",
+      "in - 1\n",
+      "Los - 1\n",
+      "Angeles - 1\n",
+      "Show - 1\n",
+      "HN: - 1\n",
+      "Word2Bits - 1\n",
+      "– - 1\n",
+      "Quantized - 1\n",
+      "Word - 1\n",
+      "Vectors - 1\n",
+      "The - 1\n",
+      "NSA - 1\n",
+      "Worked - 1\n",
+      "to - 1\n",
+      "“Track - 1\n",
+      "Down” - 1\n",
+      "Bitcoin - 1\n",
+      "Users, - 1\n",
+      "Snowden - 1\n",
+      "Documents - 1\n",
+      "Reveal - 1\n",
+      "In - 1\n",
+      "Search - 1\n",
+      "of - 1\n",
+      "God’s - 1\n",
+      "Perfect - 1\n",
+      "Proofs - 1\n",
+      "Reflections - 1\n",
+      "on - 1\n",
+      "founder - 1\n",
+      "mental - 1\n",
+      "health, - 1\n",
+      "coaching, - 1\n",
+      "a - 1\n",
+      "decade - 1\n",
+      "after - 1\n",
+      "losing - 1\n",
+      "my - 1\n",
+      "mom - 1\n",
+      "Ex-Facebook - 1\n",
+      "insider - 1\n",
+      "says - 1\n",
+      "covert - 1\n",
+      "data - 1\n",
+      "harvesting - 1\n",
+      "was - 1\n",
+      "routine - 1\n",
+      "Salesforce - 1\n",
+      "in - 1\n",
+      "advanced - 1\n",
+      "talks - 1\n",
+      "to - 1\n",
+      "buy - 1\n",
+      "MuleSoft - 1\n",
+      "N26 - 1\n",
+      "raises - 1\n",
+      "$160M - 1\n",
+      "from - 1\n",
+      "Tencent - 1\n",
+      "and - 1\n",
+      "Allianz - 1\n",
+      "Toxic - 1\n",
+      "management - 1\n",
+      "cost - 1\n",
+      "an - 1\n",
+      "award-winning - 1\n",
+      "game - 1\n",
+      "studio - 1\n",
+      "its - 1\n",
+      "best - 1\n",
+      "developers - 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Counting f(w,d) - number of times word appears in document\n",
+    "\n",
+    "from collections import Counter\n",
+    "\n",
+    "doc_count = []\n",
+    "for doc in documents:\n",
+    "    c_tuple = Counter(doc.split()).most_common()\n",
+    "    doc_count.append(c_tuple)\n",
+    "\n",
+    "for touples in doc_count:\n",
+    "    for t in touples:\n",
+    "        print('{} - {}'.format(t[0], t[1]))"
    ]
   },
   {
