fwD and D counted

--- a/tf-idf.ipynb
+++ b/tf-idf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,42 +34,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launch HN: Promise (YC W18) – Cost-effective, more humane alternative to jail\n",
-      "FTC Probing Facebook for Use of Personal Data, Source Says\n",
-      "Lightning on Stellar: Technical Spec and Roadmap\n",
-      "Google News Initiative\n",
-      "Mont Saint Michel Reveals New Secrets\n",
-      "'Fifth Generation' Became Japan's Lost Generation (1992)\n",
-      "Online flag waver\n",
-      "BuildZoom (YC W13) is hiring an engineering manager\n",
-      "A Self-Replicating Neural Network\n",
-      "The US Army’s costly quest for the perfect radio\n",
-      "NGraph: A New Open Source Compiler for Deep Learning Systems\n",
-      "Debugging Behind the Iron Curtain (2010)\n",
-      "Eve: Programming designed for humans\n",
-      "The Brown One, the Honey Eater, the Shaggy Coat, the Destroyer (1998)\n",
-      "Macular degeneration: 'I've been given my sight back'\n",
-      "The history of documented Unix facilities\n",
-      "Breaking the Ledger Crypto Wallet Security Model\n",
-      "Diaphragmatic Breathing Exercises and Your Vagus Nerve (2017)\n",
-      "The ability to correct errors in GPLv2 compliance: the right thing to do\n",
-      "Texas Woman with Cerebral Palsy: Uber Denied Her Service Over Two Dozen Times\n",
-      "Both Facebook and Cambridge Analytica Threatened to Sue Journalists\n",
-      "SpaceX indicates it will manufacture the BFR rocket in Los Angeles\n",
-      "Show HN: Word2Bits – Quantized Word Vectors\n",
-      "The NSA Worked to “Track Down” Bitcoin Users, Snowden Documents Reveal\n",
-      "In Search of God’s Perfect Proofs\n",
-      "Reflections on founder mental health, coaching, a decade after losing my mom\n",
-      "Ex-Facebook insider says covert data harvesting was routine\n",
-      "Salesforce in advanced talks to buy MuleSoft\n",
-      "N26 raises $160M from Tencent and Allianz\n",
-      "Toxic management cost an award-winning game studio its best developers\n"
+      "Slack will now let your employer read your DMs\n",
+      "People Are Using Old Laptop Batteries to Build Own Versions of Teslas Powerwall\n",
+      "Utah governor signs law legalizing freerange parenting\n",
+      "Cloud Identity\n",
+      "Introducing the Lineageos SDK\n",
+      "Airborn Create and edit files online securely\n",
+      "The Glory That Was Yahoo\n",
+      "Pioneers of Modern Computer Architecture Receive ACM AM Turing Award\n",
+      "Complex Animals Led to More Oxygen Says Maverick Theory\n",
+      "Show HN An AI app that generates quizzes from a photograph of a texbook\n",
+      "Facebook is planning to build a real community with parks stores and apartments\n",
+      "From Rails to Clojure Then to Java Then Back to Rails\n",
+      "Sources Google is buying Lytro for about 40M\n",
+      "Michał Zalewski  Director Information Security Engineering leaves Google\n",
+      "Userdefined Order in SQL\n",
+      "Show HN Sheet2Site  Create Websites Out of Google Sheets\n",
+      "Blocklist Facebook domains 2016\n",
+      "Netflix unveils Netflix Sans a new custom typeface\n",
+      "No Longer a Secret How Israel Destroyed Syrias Nuclear Reactor\n",
+      "American cockroaches thrive in cities thanks to their long genomes\n",
+      "Running Java in a Container\n",
+      "DeleteFacebook Perspective from Mastodon\n",
+      "FTC Probing Facebook for Use of Personal Data Source Says\n",
+      "Launch HN Promise YC W18  Costeffective more humane alternative to jail\n",
+      "Experimenting with Light Fields\n",
+      "Why I Dont Sign NonCompetes\n",
+      "Flexport is hiring engineers to build software for our 747\n",
+      "Benchmarking OS primitives\n",
+      "JDK 10 General Availability\n",
+      "Researchers Learned to Use Facebook Likes to Sway Your Thinking\n"
      ]
     }
    ],
    "source": [
     "documents = []\n",
-    "[documents.append(i.find(\"title\").text) for i in items]\n",
+    "documents = []\n",
+    "#Filtering all non alphanumeic or whitespace characters\n",
+    "for i in items:\n",
+    "    text = i.find(\"title\").text\n",
+    "    res = ''.join(e for e in text if (e.isalnum() | e.isspace()))\n",
+    "    documents.append(res)\n",
+    "\n",
     "for doc in documents:\n",
     "    print(doc)"
    ]
