--- a/tf-idf.ipynb
+++ b/tf-idf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,43 +27,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Slack will now let your employer read your DMs\n",
-      "People Are Using Old Laptop Batteries to Build Own Versions of Teslas Powerwall\n",
-      "Utah governor signs law legalizing freerange parenting\n",
-      "Cloud Identity\n",
-      "Introducing the Lineageos SDK\n",
-      "Airborn Create and edit files online securely\n",
-      "The Glory That Was Yahoo\n",
-      "Pioneers of Modern Computer Architecture Receive ACM AM Turing Award\n",
-      "Complex Animals Led to More Oxygen Says Maverick Theory\n",
-      "Show HN An AI app that generates quizzes from a photograph of a texbook\n",
-      "Facebook is planning to build a real community with parks stores and apartments\n",
-      "From Rails to Clojure Then to Java Then Back to Rails\n",
-      "Sources Google is buying Lytro for about 40M\n",
-      "Michał Zalewski  Director Information Security Engineering leaves Google\n",
-      "Userdefined Order in SQL\n",
-      "Show HN Sheet2Site  Create Websites Out of Google Sheets\n",
-      "Blocklist Facebook domains 2016\n",
-      "Netflix unveils Netflix Sans a new custom typeface\n",
-      "No Longer a Secret How Israel Destroyed Syrias Nuclear Reactor\n",
-      "American cockroaches thrive in cities thanks to their long genomes\n",
-      "Running Java in a Container\n",
-      "DeleteFacebook Perspective from Mastodon\n",
-      "FTC Probing Facebook for Use of Personal Data Source Says\n",
-      "Launch HN Promise YC W18  Costeffective more humane alternative to jail\n",
-      "Experimenting with Light Fields\n",
-      "Why I Dont Sign NonCompetes\n",
-      "Flexport is hiring engineers to build software for our 747\n",
-      "Benchmarking OS primitives\n",
-      "JDK 10 General Availability\n",
-      "Researchers Learned to Use Facebook Likes to Sway Your Thinking\n"
+      "Gigantic Circular Shock Acoustic Waves in Ionosphere Triggered by SpaceX Launch\n",
+      "Evolution Is the New Deep Learning\n",
+      "Section  A Key Legal Shield for Facebook Google Is About to Change\n",
+      "A Visiting Star Jostled Our Solar System  Years Ago\n",
+      "Hedgefund managers that do the most research will post the best returns\n",
+      "Number systems of the world sorted by complexity of counting \n",
+      "GitLab  released with CICD for GitHub\n",
+      "Coming Soon to a Wrist Near You MicroLED Displays\n",
+      "Steinhaus Longimeter\n",
+      "Fractions in the Farey Sequences and the SternBrocot Tree\n",
+      "Show HN Transfer files to mobile device by scanning a QR code from the terminal\n",
+      "Zendar is hiring a graduate student intern\n",
+      "Zuckerberg and Sandberg cant be trusted to handle data leak fallout\n",
+      "Show HN Asynchronous HTTP client for Python \n",
+      "Krita   A painting app for cartoonists illustrators and concept artists\n",
+      "Understanding CPU ports contention\n",
+      "Where to Score Classified Ads from HaightAshbury\n",
+      "Cutting Old Heads at IBM\n",
+      "Walmart Launches Small Army of Autonomous Scanning Robots\n",
+      "TravisBuddy Adds comments to failed pull requests tells author what went wrong\n",
+      "The Myth of Authenticity Is Killing TexMex\n",
+      "Tech Giants Face Hundreds of Millions in New Taxes in Europe\n",
+      "Efficient Recurrent Neural Networks using Structured Matrices in FPGAs\n",
+      "SCL  A Very British Coup\n",
+      "Intels Chipped Chips\n",
+      "Chaos and Variance in Galaxy Formation\n",
+      "Exploring WordVec\n",
+      "Why Technical Debt Can Be a Good Thing\n",
+      "Logging in large mathematical models\n",
+      "Firefox Product Roadmap\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
     "#Filtering all non alphanumeic or whitespace characters\n",
     "for i in items:\n",
     "    text = i.find(\"title\").text\n",
-    "    res = ''.join(e for e in text if (e.isalnum() | e.isspace()))\n",
+    "    res = ''.join(e for e in text if (e.isalpha() | e.isspace()))\n",
     "    documents.append(res)\n",
     "\n",
     "for doc in documents:\n",
@@ -82,258 +82,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launch - 1\n",
-      "HN: - 1\n",
-      "Promise - 1\n",
-      "(YC - 1\n",
-      "W18) - 1\n",
-      "– - 1\n",
-      "Cost-effective, - 1\n",
-      "more - 1\n",
-      "humane - 1\n",
-      "alternative - 1\n",
-      "to - 1\n",
-      "jail - 1\n",
-      "FTC - 1\n",
-      "Probing - 1\n",
-      "Facebook - 1\n",
-      "for - 1\n",
-      "Use - 1\n",
-      "of - 1\n",
-      "Personal - 1\n",
-      "Data, - 1\n",
-      "Source - 1\n",
-      "Says - 1\n",
-      "Lightning - 1\n",
-      "on - 1\n",
-      "Stellar: - 1\n",
-      "Technical - 1\n",
-      "Spec - 1\n",
-      "and - 1\n",
-      "Roadmap - 1\n",
-      "Google - 1\n",
-      "News - 1\n",
-      "Initiative - 1\n",
-      "Mont - 1\n",
-      "Saint - 1\n",
-      "Michel - 1\n",
-      "Reveals - 1\n",
-      "New - 1\n",
-      "Secrets - 1\n",
-      "'Fifth - 1\n",
-      "Generation' - 1\n",
-      "Became - 1\n",
-      "Japan's - 1\n",
-      "Lost - 1\n",
-      "Generation - 1\n",
-      "(1992) - 1\n",
-      "Online - 1\n",
-      "flag - 1\n",
-      "waver - 1\n",
-      "BuildZoom - 1\n",
-      "(YC - 1\n",
-      "W13) - 1\n",
-      "is - 1\n",
-      "hiring - 1\n",
-      "an - 1\n",
-      "engineering - 1\n",
-      "manager - 1\n",
-      "A - 1\n",
-      "Self-Replicating - 1\n",
-      "Neural - 1\n",
-      "Network - 1\n",
-      "The - 1\n",
-      "US - 1\n",
-      "Army’s - 1\n",
-      "costly - 1\n",
-      "quest - 1\n",
-      "for - 1\n",
-      "the - 1\n",
-      "perfect - 1\n",
-      "radio - 1\n",
-      "NGraph: - 1\n",
-      "A - 1\n",
-      "New - 1\n",
-      "Open - 1\n",
-      "Source - 1\n",
-      "Compiler - 1\n",
-      "for - 1\n",
-      "Deep - 1\n",
-      "Learning - 1\n",
-      "Systems - 1\n",
-      "Debugging - 1\n",
-      "Behind - 1\n",
-      "the - 1\n",
-      "Iron - 1\n",
-      "Curtain - 1\n",
-      "(2010) - 1\n",
-      "Eve: - 1\n",
-      "Programming - 1\n",
-      "designed - 1\n",
-      "for - 1\n",
-      "humans - 1\n",
-      "the - 3\n",
-      "The - 1\n",
-      "Brown - 1\n",
-      "One, - 1\n",
-      "Honey - 1\n",
-      "Eater, - 1\n",
-      "Shaggy - 1\n",
-      "Coat, - 1\n",
-      "Destroyer - 1\n",
-      "(1998) - 1\n",
-      "Macular - 1\n",
-      "degeneration: - 1\n",
-      "'I've - 1\n",
-      "been - 1\n",
-      "given - 1\n",
-      "my - 1\n",
-      "sight - 1\n",
-      "back' - 1\n",
-      "The - 1\n",
-      "history - 1\n",
-      "of - 1\n",
-      "documented - 1\n",
-      "Unix - 1\n",
-      "facilities - 1\n",
-      "Breaking - 1\n",
-      "the - 1\n",
-      "Ledger - 1\n",
-      "Crypto - 1\n",
-      "Wallet - 1\n",
-      "Security - 1\n",
-      "Model - 1\n",
-      "Diaphragmatic - 1\n",
-      "Breathing - 1\n",
-      "Exercises - 1\n",
-      "and - 1\n",
-      "Your - 1\n",
-      "Vagus - 1\n",
-      "Nerve - 1\n",
-      "(2017) - 1\n",
-      "to - 2\n",
-      "The - 1\n",
-      "ability - 1\n",
-      "correct - 1\n",
-      "errors - 1\n",
-      "in - 1\n",
-      "GPLv2 - 1\n",
-      "compliance: - 1\n",
-      "the - 1\n",
-      "right - 1\n",
-      "thing - 1\n",
-      "do - 1\n",
-      "Texas - 1\n",
-      "Woman - 1\n",
-      "with - 1\n",
-      "Cerebral - 1\n",
-      "Palsy: - 1\n",
-      "Uber - 1\n",
-      "Denied - 1\n",
-      "Her - 1\n",
-      "Service - 1\n",
-      "Over - 1\n",
-      "Two - 1\n",
-      "Dozen - 1\n",
-      "Times - 1\n",
-      "Both - 1\n",
-      "Facebook - 1\n",
-      "and - 1\n",
-      "Cambridge - 1\n",
-      "Analytica - 1\n",
-      "Threatened - 1\n",
-      "to - 1\n",
-      "Sue - 1\n",
-      "Journalists - 1\n",
-      "SpaceX - 1\n",
-      "indicates - 1\n",
-      "it - 1\n",
-      "will - 1\n",
-      "manufacture - 1\n",
-      "the - 1\n",
-      "BFR - 1\n",
-      "rocket - 1\n",
-      "in - 1\n",
-      "Los - 1\n",
-      "Angeles - 1\n",
-      "Show - 1\n",
-      "HN: - 1\n",
-      "Word2Bits - 1\n",
-      "– - 1\n",
-      "Quantized - 1\n",
-      "Word - 1\n",
-      "Vectors - 1\n",
-      "The - 1\n",
-      "NSA - 1\n",
-      "Worked - 1\n",
-      "to - 1\n",
-      "“Track - 1\n",
-      "Down” - 1\n",
-      "Bitcoin - 1\n",
-      "Users, - 1\n",
-      "Snowden - 1\n",
-      "Documents - 1\n",
-      "Reveal - 1\n",
-      "In - 1\n",
-      "Search - 1\n",
-      "of - 1\n",
-      "God’s - 1\n",
-      "Perfect - 1\n",
-      "Proofs - 1\n",
-      "Reflections - 1\n",
-      "on - 1\n",
-      "founder - 1\n",
-      "mental - 1\n",
-      "health, - 1\n",
-      "coaching, - 1\n",
-      "a - 1\n",
-      "decade - 1\n",
-      "after - 1\n",
-      "losing - 1\n",
-      "my - 1\n",
-      "mom - 1\n",
-      "Ex-Facebook - 1\n",
-      "insider - 1\n",
-      "says - 1\n",
-      "covert - 1\n",
-      "data - 1\n",
-      "harvesting - 1\n",
-      "was - 1\n",
-      "routine - 1\n",
-      "Salesforce - 1\n",
-      "in - 1\n",
-      "advanced - 1\n",
-      "talks - 1\n",
-      "to - 1\n",
-      "buy - 1\n",
-      "MuleSoft - 1\n",
-      "N26 - 1\n",
-      "raises - 1\n",
-      "$160M - 1\n",
-      "from - 1\n",
-      "Tencent - 1\n",
-      "and - 1\n",
-      "Allianz - 1\n",
-      "Toxic - 1\n",
-      "management - 1\n",
-      "cost - 1\n",
-      "an - 1\n",
-      "award-winning - 1\n",
-      "game - 1\n",
-      "studio - 1\n",
-      "its - 1\n",
-      "best - 1\n",
-      "developers - 1\n"
+      "Gigantic Circular Shock Acoustic Waves in Ionosphere Triggered by SpaceX Launch Evolution Is the New Deep Learning Section  A Key Legal Shield for Facebook Google Is About to Change A Visiting Star Jostled Our Solar System  Years Ago Hedgefund managers that do the most research will post the best returns Number systems of the world sorted by complexity of counting  GitLab  released with CICD for GitHub Coming Soon to a Wrist Near You MicroLED Displays Steinhaus Longimeter Fractions in the Farey Sequences and the SternBrocot Tree Show HN Transfer files to mobile device by scanning a QR code from the terminal Zendar is hiring a graduate student intern Zuckerberg and Sandberg cant be trusted to handle data leak fallout Show HN Asynchronous HTTP client for Python  Krita   A painting app for cartoonists illustrators and concept artists Understanding CPU ports contention Where to Score Classified Ads from HaightAshbury Cutting Old Heads at IBM Walmart Launches Small Army of Autonomous Scanning Robots TravisBuddy Adds comments to failed pull requests tells author what went wrong The Myth of Authenticity Is Killing TexMex Tech Giants Face Hundreds of Millions in New Taxes in Europe Efficient Recurrent Neural Networks using Structured Matrices in FPGAs SCL  A Very British Coup Intels Chipped Chips Chaos and Variance in Galaxy Formation Exploring WordVec Why Technical Debt Can Be a Good Thing Logging in large mathematical models Firefox Product Roadmap\n"
      ]
     }
    ],
+   "source": [
+    "#joining words\n",
+    "integrated = ' '.join(documents)\n",
+    "print(integrated)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Counting f(w,d) - number of times word appears in document\n",
     "\n",
@@ -344,9 +114,9 @@
     "    c_tuple = Counter(doc.split()).most_common()\n",
     "    doc_count.append(c_tuple)\n",
     "\n",
-    "for touples in doc_count:\n",
-    "    for t in touples:\n",
-    "        print('{} - {}'.format(t[0], t[1]))"
+    "# for touples in doc_count:\n",
+    "#     for t in touples:\n",
+    "#         print('{} - {}'.format(t[0], t[1]))"
    ]
   },
   {
